--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -315,6 +315,9 @@ iframe {
     width: 100%;
     height: 300px;
   }
+  .breadcrumb {
+    margin: 0 1rem 0px;
+  }
 }
 
 .Confirm__page {
